fix: input elements not showing border

--- a/src/components/LoginModal/LoginModal.module.scss
+++ b/src/components/LoginModal/LoginModal.module.scss
@@ -22,6 +22,7 @@
 .modal__input {
   width: 100%;
   padding: 0.3rem;
+  border: 1px solid $color-grey;
 }
 
 .modal__bottom {
